--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,20 @@ input, button {
   padding: 1rem; */
 }
 
+*::-webkit-scrollbar {
+  width: 12px;
+  height:12px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #f3f3f3;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #f26522;
+  border-radius: 20px;
+  border: 3px solid #f3f3f3;
+}
 /* section {
   width: min(100%, 500px);
 }
