--- a/src/index.css
+++ b/src/index.css
@@ -40,7 +40,7 @@ input, button {
 }
 
 *::-webkit-scrollbar-thumb {
-  background-color: #f26522;
+  background-color: #8d891f;
   border-radius: 20px;
   border: 3px solid #f3f3f3;
 }
