add calling video

--- a/src/assets/scss/colors.scss
+++ b/src/assets/scss/colors.scss
@@ -4,7 +4,7 @@ $primary-hover: #f6f035;
 
 $secondary: #888282;
 
-$background  : #f2f2ec;
+$background  : #f2f2ec; //common
 $background-1: #93932e1c;
-$background-2: #dee1e6;
-$background-3: #c5c5b7;
+$background-2: #dee1e6; //menu-notify-count
+$background-3: #c5c5b7; //menu-active, unallow
