--- a/src/assets/scss/colors.scss
+++ b/src/assets/scss/colors.scss
@@ -1,10 +1,19 @@
+$black : #000;
+$white : #fff;
+$red   : #ff0000;
+$red1  : #b31414;
+$red2  : #ef7b7b;
+$gray  : #808080;
+$green : #008000;
+$green1: #29bc52;
+
 $primary      : #e1db2c;
 $primary-2    : #a5a038;
 $primary-hover: #f6f035;
 
 $secondary: #888282;
 
-$background  : #f2f2ec; //common
-$background-1: #93932e1c;
-$background-2: #dee1e6; //menu-notify-count
-$background-3: #c5c5b7; //menu-active, unallow
+$background   : #f2f2ec; //common
+$background-1 : #93932e1c;
+$background-2 : #dee1e6; //menu-notify-count
+$background-3 : #c5c5b7; //menu-active, unallow
