--- a/src/assets/scss/colors.scss
+++ b/src/assets/scss/colors.scss
@@ -10,6 +10,7 @@ $green1: #29bc52;
 $primary      : #e1db2c;
 $primary-2    : #a5a038;
 $primary-hover: #f6f035;
+$primary-3    : #665c23;
 
 $secondary: #888282;
 
