--- a/src/features/Home/Chat.scss
+++ b/src/features/Home/Chat.scss
@@ -13,7 +13,7 @@
             column-gap : 20px;
 
             i {
-                color: $primary;
+                color: $primary-3;
 
                 &:hover {
                     color : $primary-hover;
