--- a/src/features/Home/Welcome.scss
+++ b/src/features/Home/Welcome.scss
@@ -2,110 +2,337 @@
 
 .container-fluid {
     height          : 100vh;
+    min-height      : 500px;
     background-color: $background;
+    overflow-y      : hidden;
 
-    .tool-container {
-        border-right: 1px solid black;
-        height      : 100vh;
+    .side-bar {
+        min-width : 75px !important;
+        background: #665c23;
+        height    : 100vh;
+        min-height: 500px;
+        overflow  : hidden;
+
+        .tool-container {
+            background: ghostwhite;
+            height    : 100%;
 
 
-        .avatar {
-            padding   : 20px 10px;
-            text-align: center;
+            .avatar {
+                padding   : 1rem 0.25rem;
+                text-align: center;
 
-            img {
-                width        : 70px;
-                height       : 70px;
-                border-radius: 50%;
+                img {
+                    width        : 100%;
+                    height       : 100%;
+                    max-width    : 70px;
+                    max-height   : 70px;
+                    border-radius: 50%;
+                }
+            }
+
+            .tool-box {
+                text-align    : center;
+                margin-top    : 20px;
+                padding-top   : 6px;
+                padding-bottom: 6px;
+
+                &.active {
+                    background-color: $background-3;
+
+                    i {
+                        background-color: $primary-hover;
+                    }
+                }
+
+                i {
+                    font-size       : 30px;
+                    background-color: $primary;
+                    border-radius   : 50%;
+                    width           : 50px;
+                    height          : 50px;
+                    text-align      : center;
+                    padding-top     : 10px;
+                    position        : relative;
+                    color           : $secondary;
+
+                    span {
+                        top             : 30px;
+                        right           : 5px;
+                        color           : $red;
+                        font-size       : 15px;
+                        position        : absolute;
+                        font-weight     : 700;
+                        background-color: $background-2;
+                        width           : 25px;
+                        height          : 25px;
+                        border-radius   : 50%;
+                        display         : flex;
+                        align-items     : center;
+                        justify-content : center;
+                    }
+
+                    &:hover {
+                        background-color: $primary-hover;
+                        cursor          : pointer;
+                    }
+                }
+
+                &.friend-chat {
+                    display: none;
+                }
+            }
+        }
+    }
+
+    .main-side {
+        display  : flex;
+        padding  : 0;
+        max-width: calc(100% - 75px); //75px of side-bar
+        position : relative;
+        min-width: 500px;
+
+        &__left {
+            padding: 12px;
+            width  : 35%;
+        }
+
+        &__right {
+            padding: 12px;
+            width  : 65%;
+        }
+    }
+
+    @media screen and (max-width: 1200px) {
+        .friend-list-container {
+            .friend-list {
+                .friend-single {
+                    &__info {
+                        .info--name {
+                            font-size: 17px;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    @media screen and (max-width: 992px) {
+        .side-bar {
+            .tool-container {
+                .tool-box {
+                    &.friend-chat {
+                        display: block;
+                    }
+                }
             }
         }
 
-        .bell-notify,
-        .contact-notify,
-        .logout {
-            text-align    : center;
-            margin-top    : 20px;
-            padding-top   : 6px;
-            padding-bottom: 6px;
+        .main-side {
+            &.open {
+                background-color: #9e9e9d;
+            }
 
-            &.active {
-                background-color: $background-3;
+            &__left {
+                position        : absolute;
+                z-index         : 1;
+                box-shadow      : 2px 0px 10px 2px;
+                background-color: #f2f2ec;
+                width           : 50%;
+                display         : none;
 
-                i {
-                    background-color: $primary-hover;
+                &.open {
+                    display: block;
                 }
             }
 
-            i {
-                font-size       : 30px;
-                background-color: $primary;
-                border-radius   : 50%;
-                width           : 50px;
-                height          : 50px;
-                text-align      : center;
-                padding-top     : 10px;
-                position        : relative;
-                color           : $secondary;
+            &__right {
+                width: 100%;
 
-                span {
-                    top             : 30px;
-                    right           : 5px;
-                    color           : red;
-                    font-size       : 15px;
-                    position        : absolute;
-                    font-weight     : 700;
-                    background-color: $background-2;
-                    width           : 25px;
-                    height          : 25px;
-                    border-radius   : 50%;
-                    display         : flex;
-                    align-items     : center;
-                    justify-content : center;
+                &.open {
+                    opacity: 0.5;
                 }
+            }
+        }
 
-                &:hover {
-                    background-color: $primary-hover;
-                    cursor          : pointer;
+        .friend-list-container {
+            .friend-list {
+                .friend-single {
+                    &__avatar {
+                        .avatar--frame {
+                            img {
+                                width : 45px !important;
+                                height: 45px !important;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    @media screen and (max-width: 768px) {
+        .main-side {
+            &.open {
+                background-color: #9e9e9d;
+            }
+
+            &__left {
+                width  : 65%;
+                display: none;
+
+                &.open {
+                    display: block;
                 }
             }
 
+            &__right {
+                &.open {
+                    opacity: 0.5;
+                }
+            }
+        }
+
+        .friend-list-container {
+            .friend-list {
+                .friend-single {
+                    &__avatar {
+                        .avatar--frame {
+                            img {
+                                width : 45px;
+                                height: 45px;
+                            }
+                        }
+                    }
+
+                    &__info {
+                        h4 {
+                            font-size: 17px;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    @media screen and (max-width: 575px) {
+        .main-row {
+            flex-wrap: wrap !important;
+        }
+
+        .side-bar {
+            min-width : 100vw !important;
+            height    : 68px;
+            min-height: 68px;
+
+            .tool-container {
+                display: flex;
+
+                .avatar {
+                    padding: 0.5rem;
+                }
+
+                .tool-box {
+                    margin-top: 0;
+                    padding   : 9px;
+                }
+            }
+        }
+
+        .main-side {
+            min-width: 100vw;
+
+            &.open {
+                background-color: #9e9e9d;
+            }
+
+            &__left {
+                width  : 100%;
+                display: none;
+
+                &.open {
+                    display: block;
+                }
+            }
+
+            &__right {
+                &.open {
+                    opacity: 0.5;
+                }
+            }
+        }
+
+        .friend-list-container {
+            height: calc(100vh - 92px) !important;
+        }
+
+        .chat-container {
+            height: calc(100vh - 92px) !important;
         }
     }
 
     .friend-list-container {
-        border-right   : 1px solid black;
-        height         : 100vh;
-        // overflow-y  : hidden;
+        display       : flex;
+        flex-direction: column;
+        height        : calc(100vh - 24px); //24px of padding-y
+        min-height    : 500px;
+        padding       : 1rem 1.25rem;
+        background    : gainsboro;
+        border-radius : 1rem;
 
         .search-box {
-            background-color: yellowgreen;
-            height          : 100px;
+            background-color: ghostwhite;
+            height          : 58px;
+            border-radius   : 0.5rem;
+            margin-bottom   : 1rem;
+            display         : flex;
+            justify-content : space-around;
+            align-items     : center;
+            border          : 1px solid #665c23;
+
+            .search-user {
+                padding: 2px 10px;
+            }
+
+            .option-contact {
+                .button {
+                    padding      : 5px 10px;
+                    border-radius: 0.5rem;
+                }
+            }
         }
 
         .option-list {
-            background-color: #d7af79;
-            height          : 50px;
+            height         : 46px;
+            font-weight    : 500;
+            display        : flex;
+            align-items    : center;
+            justify-content: center;
+            border-bottom  : 1px solid;
         }
 
-        .friend.list {
-            overflow-y   : scroll;
-            overflow-x   : hidden;
-            // height    : 600px;
-            height       : calc(100vh - 160px) !important;
+        .friend-list {
+            overflow-y      : auto;
+            overflow-x      : hidden;
+            height          : 100%;
+            // height       : calc(100vh - 160px) !important;
 
             .friend-single {
                 // background-color: aquamarine;
-                margin-right : 15px;
+                // margin-right : 15px;
                 padding      : 10px;
                 display      : flex;
-                border-bottom: 1px solid black;
+                align-items  : center;
+                border-bottom: 1px solid $black;
                 margin-top   : 10px;
                 position     : relative;
+                border-radius: 1rem;
+                box-shadow   : 0px 0px 1px 0px;
 
                 i {
                     position : absolute;
                     right    : 10px;
-                    color    : red;
+                    color    : $red;
                     font-size: 25px;
                     top      : 25px;
                 }
@@ -120,12 +347,28 @@
                 }
 
                 &__avatar {
-                    width: 20%;
+                    .avatar--frame {
+                        position: relative;
+                        width   : fit-content;
+                        height  : fit-content;
 
-                    img {
-                        width        : 60px;
-                        height       : 60px;
-                        border-radius: 50%;
+                        img {
+                            width        : 50px;
+                            height       : 50px;
+                            border-radius: 50%;
+                        }
+
+                        .status {
+                            width        : 14px;
+                            height       : 14px;
+                            border-radius: 50%;
+                            background   : $green1;
+                            border       : 1px solid $green;
+                            position     : absolute;
+                            bottom       : 0px;
+                            right        : 0px;
+                            box-shadow   : -2px 0px 5px 2px $white;
+                        }
                     }
                 }
 
@@ -142,6 +385,7 @@
                         overflow     : hidden;
                         text-overflow: ellipsis;
                         white-space  : nowrap;
+                        margin-bottom: 0;
                     }
                 }
             }
@@ -150,9 +394,11 @@
     }
 
     .chat-container {
-        height    : 100vh;
-        overflow-y: auto;
-        overflow-x: hidden;
+        overflow     : hidden;
+        background   : gainsboro;
+        border-radius: 1rem;
+        height       : calc(100vh - 24px);
+        min-height   : 500px;
 
         .chat__friend {
             border-bottom: 1px solid black;
@@ -164,6 +410,7 @@
                 display        : flex;
                 justify-content: center;
                 align-items    : center;
+                padding        : 0.5rem;
 
                 img {
                     width        : 65px;
@@ -177,8 +424,6 @@
                 flex-direction : column;
                 justify-content: center;
 
-                .info--name {}
-
                 p.info--state {
                     margin-bottom: 0 !important;
                 }
@@ -186,12 +431,11 @@
         }
 
         .chat__place {
-            border-bottom      : 1px solid black;
-            height             : 65vh;
-            overflow-y         : scroll;
-            background-color   : #93932e1c;
-            padding            : 20px;
-            // position        : relative;
+            border-bottom   : 1px solid black;
+            overflow-y      : auto;
+            background-color: #93932e1c;
+            padding         : 20px;
+            height          : calc(100% - 290px);
 
             .friend-single {
                 display      : flex;
@@ -233,22 +477,22 @@
 
 
             &.on-video {
-                height         : calc(100vh - 90px) !important;
+                // height         : calc(100vh - 90px) !important;
                 position       : relative;
                 display        : flex;
                 justify-content: center;
 
                 .large-frame {
-                    width           : calc(100% - 40px);
-                    height          : calc(100% - 40px);
-                    background-color: black;
-                    position        : absolute;
+                    width              : calc(100% - 40px);
+                    // height          : calc(100% - 40px);
+                    background-color   : $black;
+                    position           : absolute;
                 }
 
                 .small-frame {
                     height          : 158px;
                     width           : 158px;
-                    background-color: black;
+                    background-color: $black;
                     position        : absolute;
                     top             : 20px;
                     right           : 20px;
@@ -314,7 +558,7 @@
                 .type-box {
                     background-color: yellowgreen;
                     padding         : 10px;
-                    overflow-y      : scroll;
+                    overflow-y      : auto;
                     width           : 100%;
 
                     textarea#type-box-text {
@@ -326,8 +570,8 @@
                 }
 
                 .send-box {
-                    height: 20px;
-                    width : 165px;
+                    width  : 165px;
+                    padding: 0.5rem;
 
                     input#button-send {
                         width     : 100%;
