--- a/src/features/auth/Register.scss
+++ b/src/features/auth/Register.scss
@@ -1,8 +1,8 @@
 section.register {
     text-align   : center;
-    margin       : 10% auto;
+    margin       : 6% auto;
     background   : linear-gradient(135deg, #22c1c3 0%, #fdbb2d 100%);
-    width        : 35%;
+    width        : 40%;
     border-radius: 15px;
 
     h1 {
@@ -54,5 +54,23 @@ section.register {
 
     .login-case {
         padding: 20px;
+    }
+}
+
+@media screen and (max-width:992px) {
+    section.register {
+        width: 58%;
+    }
+}
+
+@media screen and (max-width:575px) {
+    section.register {
+        width: 78%;
+    }
+}
+
+@media screen and (max-width:500px) {
+    section.register {
+        width: 90%;
     }
 }
