--- a/src/features/Home/ModalVideoCall.scss
+++ b/src/features/Home/ModalVideoCall.scss
@@ -7,7 +7,7 @@
     }
 }
 
-.modal-body {
+.video-call-modal-body {
     height         : 72vh;
     display        : flex;
     justify-content: center;
