add group list UI, create, read

--- a/src/features/Home/ModalVideoCall.scss
+++ b/src/features/Home/ModalVideoCall.scss
@@ -1,7 +1,7 @@
 @import '../../assets/scss/colors.scss';
 
 .modal-header {
-    .modal-title {
+    .modal-title.modal-video-call {
         width       : 100%;
         padding-left: 30px;
     }
