crud group member

--- a/src/features/Home/Welcome.scss
+++ b/src/features/Home/Welcome.scss
@@ -291,7 +291,8 @@
             border          : 1px solid #665c23;
 
             .search-user {
-                padding: 2px 10px;
+                padding      : 2px 10px;
+                outline-color: #e1db2c;
             }
 
             .option-contact {
