--- a/src/features/users/Contact.scss
+++ b/src/features/users/Contact.scss
@@ -42,92 +42,114 @@
     }
 }
 
+.chat-container {
+    .contact-container {
+        margin: 30px;
 
-.contact-container {
-    margin: 30px;
+        .contact-list {
+            margin-top: 30px;
+            overflow-y: auto;
+            overflow-x: hidden;
+            height    : calc(100vh - 158px);
 
-    .contact-list {
-        margin-top: 30px;
-        overflow-y: auto;
-        overflow-x: hidden;
-        height    : calc(100vh - 158px);
+            .user-single {
+                display         : flex;
+                align-items     : center;
+                justify-content : space-between;
+                background-color: $background-1;
+                padding         : 10px;
+                border-radius   : 10px;
+                margin-bottom   : 15px;
 
-        .user-single {
-            display         : flex;
-            align-items     : center;
-            justify-content : space-between;
-            background-color: $background-1;
-            padding         : 10px;
-            border-radius   : 10px;
-            margin-bottom   : 15px;
+                &__avatar {
+                    img {
+                        width        : 70px;
+                        height       : 70px;
+                        border-radius: 50%;
+                    }
+                }
 
-            &__avatar {
-                img {
-                    width        : 70px;
-                    height       : 70px;
-                    border-radius: 50%;
+                &__info {
+                    padding: 0 20px;
+                    width  : 58%;
+
+                    .info--name,
+                    .info--preview-message {
+                        white-space  : nowrap;
+                        overflow     : hidden;
+                        text-overflow: ellipsis;
+                        margin-bottom: 5px;
+                    }
+                }
+
+                .resolve {
+                    display        : flex;
+                    gap            : 5px;
+                    flex-wrap      : wrap;
+                    justify-content: flex-end;
+
+                    .button-refuse {
+                        background-color: $background;
+
+                        &:hover {
+                            background-color: $primary-hover;
+                            cursor          : pointer;
+                        }
+                    }
                 }
             }
 
-            &__info {
-                padding: 0 20px;
-                width  : 58%;
 
-                .info--name,
-                .info--preview-message {
-                    white-space  : nowrap;
-                    overflow     : hidden;
-                    text-overflow: ellipsis;
-                    margin-bottom: 5px;
+        }
+
+        @media screen and (max-width: 575px) {
+            .user-single {
+                &__avatar {
+                    img {
+                        width : 50px;
+                        height: 50px;
+                    }
                 }
-            }
 
-            .resolve {
-                display        : flex;
-                gap            : 5px;
-                flex-wrap      : wrap;
-                justify-content: flex-end;
+                &__info {
+                    padding: 0 10px;
+                }
 
-                .button-refuse {
-                    background-color: $background;
+                .resolve {
+                    font-size: 14px;
 
-                    &:hover {
-                        background-color: $primary-hover;
-                        cursor          : pointer;
+                    .button {
+                        padding: 5px 10px;
                     }
                 }
             }
         }
 
-
-    }
-
-    @media screen and (max-width: 575px) {
-        .user-single {
-            &__avatar {
-                img {
-                    width : 50px;
-                    height: 50px;
-                }
-            }
-
-            &__info {
-                padding: 0 10px;
-            }
-
-            .resolve {
-                font-size: 14px;
-
-                .button {
-                    padding: 5px 10px;
-                }
+        @media screen and (max-width: 786px) {
+            .contact-list {
+                height: calc(100vh - 210px);
             }
         }
     }
 
-    @media screen and (max-width: 786px) {
-        .contact-list {
-            height: calc(100vh - 210px);
+    .search-box {
+        background-color: ghostwhite;
+        padding         : 0.5rem 0;
+        display         : flex;
+        justify-content : space-around;
+        align-items     : center;
+
+        .search-user {
+            padding      : 2px 10px;
+            width        : 68%;
+            outline-color: #e1db2c;
+        }
+
+        .option-contact {
+            .button {
+                padding      : 5px 10px;
+                border-radius: 0.5rem;
+            }
         }
     }
 }
