--- a/src/features/users/ModalNewContact.scss
+++ b/src/features/users/ModalNewContact.scss
@@ -57,7 +57,7 @@
             margin-right: 10px;
         }
 
-        input.type-content {
+        input {
             padding      : 5px;
             padding-left : 10px;
             border-radius: 10px;
