--- a/src/features/group/RoomApp.scss
+++ b/src/features/group/RoomApp.scss
@@ -1,3 +1,10 @@
+.modal-header.modal-room-app {
+    .modal-title {
+        width     : 100%;
+        text-align: center;
+    }
+}
+
 .chatWindow {
     display          : grid;
     grid-column-start: 2;
