--- a/src/features/users/GroupMember.scss
+++ b/src/features/users/GroupMember.scss
@@ -3,14 +3,15 @@
 .list__place {
     overflow-y: auto;
 
-    padding: 20px;
-    height : calc(100% - 190px);
-    display: flex;
-    gap    : 1rem;
+    padding  : 20px;
+    height   : calc(100% - 190px);
+    display  : flex;
+    flex-wrap: wrap;
+    gap      : 1rem;
 
     .container-single {
         background-color: #93932e1c;
-        width           : 50%;
+        width           : 48%;
         padding         : 1rem;
         border-radius   : 0.5rem;
         height          : fit-content;
