--- a/src/features/users/GroupMember.scss
+++ b/src/features/users/GroupMember.scss
@@ -10,16 +10,16 @@
     gap      : 1rem;
 
     .container-single {
-        background-color: #93932e1c;
-        width           : 48%;
-        padding         : 1rem;
-        border-radius   : 0.5rem;
-        height          : fit-content;
-        display         : flex;
-        flex-direction  : column;
-        align-items     : center;
-        border          : 1px solid;
-        position        : relative;
+        background-color   : #93932e1c;
+        width              : 48%;
+        padding            : 1rem;
+        border-radius      : 0.5rem;
+        height             : fit-content;
+        display            : flex;
+        flex-direction     : column;
+        align-items        : center;
+        // border          : 1px solid;
+        position           : relative;
 
         .button-delete {
             position : absolute;
