--- a/src/features/Home/Welcome.scss
+++ b/src/features/Home/Welcome.scss
@@ -340,6 +340,16 @@
             height          : 100%;
             // height       : calc(100vh - 160px) !important;
 
+            &-none {
+                width : 100%;
+                height: 100%;
+
+                img {
+                    width : 100%;
+                    height: 100%;
+                }
+            }
+
             .friend-single {
                 // background-color: aquamarine;
                 // margin-right : 15px;
