--- a/src/features/users/Contact.scss
+++ b/src/features/users/Contact.scss
@@ -43,6 +43,17 @@
 }
 
 .chat-container {
+    .contact-home {
+        width  : 100%;
+        height : 100%;
+        padding: 2rem;
+
+        img {
+            width : 100%;
+            height: 100%;
+        }
+    }
+
     .contact-container {
         margin: 30px;
 
@@ -51,6 +62,16 @@
             overflow-y: auto;
             overflow-x: hidden;
             height    : calc(100vh - 158px);
+
+            &-none {
+                width : 100%;
+                height: 100%;
+
+                img {
+                    width : 100%;
+                    height: 100%;
+                }
+            }
 
             .user-single {
                 display         : flex;
