--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  color: #55502d;
+  /* color: #55502d; */
+  color:#454125;
 }
 
 /* || UTILITY CLASSES */
