--- a/src/features/Home/Welcome.scss
+++ b/src/features/Home/Welcome.scss
@@ -1,10 +1,10 @@
 @import '../../assets/scss/colors.scss';
 
 .container-fluid {
-    height          : 100vh;
-    min-height      : 500px;
-    background-color: $background;
-    overflow-y      : hidden;
+    height             : 100vh;
+    min-height         : 500px;
+    // background-color: $background;
+    overflow-y         : hidden;
 
     .side-bar {
         min-width : 75px !important;
@@ -272,13 +272,14 @@
     }
 
     .friend-list-container {
-        display       : flex;
-        flex-direction: column;
-        height        : calc(100vh - 24px); //24px of padding-y
-        min-height    : 500px;
-        padding       : 1rem 1.25rem;
-        background    : gainsboro;
-        border-radius : 1rem;
+        display          : flex;
+        flex-direction   : column;
+        height           : calc(100vh - 24px); //24px of padding-y
+        min-height       : 500px;
+        padding          : 1rem 1.25rem;
+        // background    : gainsboro;
+        background       : #f3f0f0;
+        border-radius    : 1rem;
 
         .search-box {
             background-color: ghostwhite;
@@ -433,11 +434,23 @@
     }
 
     .chat-container {
-        overflow     : hidden;
-        background   : gainsboro;
-        border-radius: 1rem;
-        height       : calc(100vh - 24px);
-        min-height   : 500px;
+        overflow        : hidden;
+        // background   : gainsboro;
+        background      : #f3f0f0;
+        border-radius   : 1rem;
+        height          : calc(100vh - 24px);
+        min-height      : 500px;
+
+        .contact-home {
+            width  : 100%;
+            height : 100%;
+            padding: 2rem;
+
+            img {
+                width : 100%;
+                height: 100%;
+            }
+        }
 
         .chat__friend {
             border-bottom: 1px solid black;
@@ -619,6 +632,80 @@
                 }
             }
 
+        }
+
+        .history-calling {
+            padding-left : 2rem;
+            padding-right: 2rem;
+            padding-top  : 1rem;
+            height       : calc(100% - 168px);
+
+            h3.count-to-month {}
+
+            .history-list {
+                margin-top: 1rem;
+                overflow-y: auto;
+                overflow-x: hidden;
+                height    : calc(100% - 68px);
+
+                &-none {
+                    width : 100%;
+                    height: 100%;
+
+                    img {
+                        width : 100%;
+                        height: 100%;
+                    }
+                }
+
+                .history-single {
+                    display         : flex;
+                    align-items     : center;
+                    justify-content : space-between;
+                    background-color: $background-1;
+                    padding         : 10px;
+                    border-radius   : 10px;
+                    margin-bottom   : 15px;
+
+                    .abstract {
+                        img {
+                            width        : 70px;
+                            height       : 70px;
+                            border-radius: 50%;
+                        }
+                    }
+
+                    .date-time {
+                        padding: 0 20px;
+                        width  : 58%;
+
+                        .date,
+                        .time {
+                            white-space  : nowrap;
+                            overflow     : hidden;
+                            text-overflow: ellipsis;
+                            margin-bottom: 5px;
+                        }
+
+                        .date {
+                            font-size: 20px;
+                        }
+
+                        .time {
+                            font-size: 17px;
+                        }
+                    }
+
+                    .duration {
+                        .count {
+                            margin       : 0;
+                            font-size    : 20px;
+                            padding-right: 1rem;
+                            font-weight  : 400;
+                        }
+                    }
+                }
+            }
         }
     }
 
