--- a/src/assets/scss/colors.scss
+++ b/src/assets/scss/colors.scss
@@ -7,10 +7,11 @@ $gray  : #808080;
 $green : #008000;
 $green1: #29bc52;
 
-$primary      : #e1db2c;
-$primary-2    : #a5a038;
-$primary-hover: #f6f035;
-$primary-3    : #665c23;
+$primary         : #e1db2c;
+$primary-2       : #a5a038;
+// $primary-hover: #f6f035;
+$primary-hover   : #d6d130;
+$primary-3       : #665c23;
 
 $secondary: #888282;
 
