--- a/src/features/Home/Welcome.scss
+++ b/src/features/Home/Welcome.scss
@@ -640,7 +640,10 @@
             padding-top  : 1rem;
             height       : calc(100% - 168px);
 
-            h3.count-to-month {}
+            img.history-none {
+                width : 100%;
+                height: 100%;
+            }
 
             .history-list {
                 margin-top: 1rem;
