translate to Vi lang

--- a/src/features/auth/Login.scss
+++ b/src/features/auth/Login.scss
@@ -35,6 +35,7 @@ section.login {
             display  : flex;
             padding  : 1rem 2rem;
             flex-wrap: wrap;
+            width    : 90%;
 
             label {
                 font-weight : 600;
