--- a/src/features/auth/Register.scss
+++ b/src/features/auth/Register.scss
@@ -21,6 +21,7 @@ section.register {
 
     form#register-form {
         margin: 10px auto;
+        margin: 2rem;
 
         table {
             height: 300px;
